xee-xpath-compiler/src/snapshots/xee_xpath_compiler__ast_ir__tests__unknown_variable_name.snap
---
source: xee-xpath-compiler/src/ast_ir.rs
expression: "convert_expr_single(\"$unknown\")"
---
Err(
    SpannedError {
        error: Error {
            code: XPST0008,
            message: Some(
                "Name not defined.",
            ),
        },
        span: Some(
            SourceSpan(
                0,
                8,
            ),
        ),
    },
)
