xee-xpath-compiler/src/snapshots/xee_xpath_compiler__ast_ir__tests__wrong_amount_of_arguments.snap
---
source: xee-xpath-compiler/src/ast_ir.rs
expression: "convert_expr_single(\"fn:string(1, 2, 3)\")"
---
Err(
    SpannedError {
        error: Error {
            code: XPST0017,
            message: Some(
                "Type error: incorrect function name or number of arguments.",
            ),
        },
        span: Some(
            SourceSpan(
                0,
                18,
            ),
        ),
    },
)
